tests/parse-errors/types/nameless_struct_member.cx
struct Data {
    int;
};

int main() {
    return 0;
}
